--- a/src/ensembles/594_TareaHogar_05.ipynb
+++ b/src/ensembles/594_TareaHogar_05.ipynb
@@ -620,7 +620,7 @@
       "metadata": {
         "id": "OFxm-xiNUOJX"
       },
-      "execution_count": 7,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -652,7 +652,7 @@
       "metadata": {
         "id": "jENpR26ZyuS8"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -675,7 +675,7 @@
       "metadata": {
         "id": "q5Rd3pnbzSiG"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -700,7 +700,7 @@
       "metadata": {
         "id": "j3toG9-lZm4K"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -713,7 +713,7 @@
       "metadata": {
         "id": "FM3lxKoLZ643"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "OsJ-91UeZ-I_"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -740,7 +740,7 @@
       "metadata": {
         "id": "vrWE7BE0aB2J"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -763,7 +763,7 @@
       "metadata": {
         "id": "jP7YlQBnaW6W"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -779,7 +779,7 @@
       "metadata": {
         "id": "xElu4s5W4rX7"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -797,10 +797,44 @@
         "ncol(dtrain)"
       ],
       "metadata": {
-        "id": "PppMHcGYaaol"
+        "id": "PppMHcGYaaol",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "outputId": "b78b098e-8d7e-47d3-ec62-ce9ad7ba95b7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "83691"
+            ],
+            "text/markdown": "83691",
+            "text/latex": "83691",
+            "text/plain": [
+              "[1] 83691"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "154"
+            ],
+            "text/markdown": "154",
+            "text/latex": "154",
+            "text/plain": [
+              "[1] 154"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -845,7 +879,7 @@
       "metadata": {
         "id": "cjgfurjdfiXb"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -854,7 +888,7 @@
         "# Aqui comienza la configuracion de la Bayesian Optimization\n",
         "\n",
         "# en este archivo quedan la evolucion binaria de la BO\n",
-        "kbayesiana <- \"bayesiana.RDATA\"\n",
+        "kbayesiana <- \"bayesiana-run2.RDATA\"\n",
         "\n",
         "funcion_optimizar <- EstimarGanancia_AUC_lightgbm # la funcion que voy a maximizar\n",
         "\n",
@@ -900,7 +934,7 @@
       "metadata": {
         "id": "WLi_o1hocvN-"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -925,10 +959,23 @@
         "}"
       ],
       "metadata": {
-        "id": "RcABNaKGciaz"
+        "id": "RcABNaKGciaz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "252ccb60-86dc-4dac-f2e8-981ec9dde413"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Warning message in mboContinue(kbayesiana):\n",
+            "“Tuning ended with term.iter. No need to continue. Simply returning stored result.”\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
