--- a/src/ensembles/594_TareaHogar_05.ipynb
+++ b/src/ensembles/594_TareaHogar_05.ipynb
@@ -670,7 +670,7 @@
       "cell_type": "code",
       "source": [
         "#PARAM$hyperparametertuning$iteraciones <- 30 # iteraciones bayesianas !!\n",
-        "PARAM$hyperparametertuning$iteraciones <- 50 # iteraciones bayesianas"
+        "PARAM$hyperparametertuning$iteraciones <- 35 # iteraciones bayesianas"
       ],
       "metadata": {
         "id": "q5Rd3pnbzSiG"
@@ -934,7 +934,7 @@
       "metadata": {
         "id": "WLi_o1hocvN-"
       },
-      "execution_count": 23,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -963,16 +963,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "252ccb60-86dc-4dac-f2e8-981ec9dde413"
+        "outputId": "6242ad77-213c-4846-a753-f9b256f78349"
       },
-      "execution_count": 22,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Warning message in mboContinue(kbayesiana):\n",
-            "“Tuning ended with term.iter. No need to continue. Simply returning stored result.”\n"
+            "Computing y column(s) for design. Not provided.\n",
+            "\n",
+            "Warning message in lgb.cv(data = dtrain, nfold = PARAM$hyperparametertuning$xval_folds, :\n",
+            "“Early stopping is not available in 'dart' mode.”\n",
+            "Mon Nov 03 08:54:03 PM 2025 AUC 0.928334600256314\n",
+            "\n",
+            "Warning message in lgb.cv(data = dtrain, nfold = PARAM$hyperparametertuning$xval_folds, :\n",
+            "“Early stopping is not available in 'dart' mode.”\n",
+            "Mon Nov 03 09:11:31 PM 2025 AUC 0.926859690309533\n",
+            "\n",
+            "Warning message in lgb.cv(data = dtrain, nfold = PARAM$hyperparametertuning$xval_folds, :\n",
+            "“Early stopping is not available in 'dart' mode.”\n"
           ]
         }
       ]
